@startuml
!theme plain
skinparam classAttributeIconSize 0
skinparam packageStyle rectangle

package "nursingHome.domain.model" #F4F6F6 {
  class NursingHome {
    - _id: number
    - _name: string
    - _ruc: string
    - _phoneNumber: string
    - _address: string
    - _description: string
    - _AdminId: number
  }
}

package "nursingHome.application" #F4F6F6 {
  class NursingHomeStore {
    - _nursingHomesSignal: Signal<NursingHome[]>
    - _loadingSignal: Signal<boolean>
    - _errorSignal: Signal<string|null>
    - nursingHomeApi: NursingHomeApi
    + nursingHomes: Signal<NursingHome[]>
    + loading: Signal<boolean>
    + error: Signal<string|null>
    + addNursingHome(nursingHome: NursingHome)
  }
}

package "nursingHome.infrastructure" #F4F6F6 {
  class NursingHomeApi {
    - _nursingHomesApidEndpoint: NursingHomeApiEndpoint
    + createNursingHome(nh: NursingHome): Observable<NursingHome>
    + updateNursingHome(nh: NursingHome): Observable<NursingHome>
    + getNursingHome(id: number): Observable<any>
  }
  class NursingHomeApiEndpoint {
    ' Methods inherited from a Base Class
  }
  class NursingHomeAssembler {
    + toEntityFromResource(res: NursingHomeResource): NursingHome
    + toResourceFromEntity(ent: NursingHome): NursingHomeResource
  }
  interface NursingHomeResource {
    id: number
    name: string
    ruc: string
    phoneNUmber: string
    address: string
    description: string
    adminId: number
  }
}

package "nursingHome.presentation" #F4F6F6 {
  object NursingHomeRouters {
    routes: Routes
  }

  package "nursing-home-form" {
    class NursingHomeForm <<component>> {
      form: FormGroup
      - store: NursingHomeStore
      - router: Router
      - route: ActivatedRoute
      + submit()
    }
  }
}

' --- Relationships ---

' Presentation Layer
NursingHomeForm --> NursingHomeStore : "uses"
NursingHomeForm --> NursingHome : "creates"

' Routing
NursingHomeRouters ..> NursingHomeForm : "lazy loads"

' Application Layer
NursingHomeStore --> NursingHomeApi : "uses"
NursingHomeStore ..> NursingHome : "manages state of"

' Infrastructure Layer
NursingHomeApi --> NursingHomeApiEndpoint : "delegates to"
NursingHomeApiEndpoint ..> NursingHomeAssembler : "uses"

' Assemblers
NursingHomeAssembler --> NursingHome : "creates"
NursingHomeAssembler ..> NursingHomeResource : "transforms"
@enduml
